# graphics-course

./: CMakeLists.txt
.github/workflows/: lint.yaml  linux.yaml  windows.yaml
cmake/: common.cmake  thirdparty.cmake
common/pipelines/: CMakeLists.txt  Pipelines.hpp
common/pipelines/aa/: AA.cpp  AA.hpp  CMakeLists.txt
common/pipelines/aa/shaders/: aa.frag
common/pipelines/perlin/: CMakeLists.txt  Perlin.cpp  Perlin.hpp
common/pipelines/perlin/shaders/: perlin.comp  perlin.frag  perlin.vert
common/pipelines/resolve_gbuffer/: ResolveGBuffer.cpp  ResolveGBuffer.hpp
common/pipelines/skybox/: Skybox.cpp
common/pipelines/static_mesh/: StaticMesh.cpp  StaticMesh.hpp
common/pipelines/static_mesh/shaders/: staticmesh.frag  staticmesh.vert
common/pipelines/terrain/: CMakeLists.txt  Cliplevel.cpp  Cliplevel.hpp  Terrain.cpp  Terrain.hpp
common/pipelines/terrain/shaders/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
common/scene/: LightSource.hpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  Texture.hpp
common/targets/: CMakeLists.txt  TerrainChunk.cpp  TerrainChunk.hpp
tasks/: CMakeLists.txt
tasks/aa/renderer/: App.cpp  CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/deferred/renderer/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp
tasks/inflight_frames/shaders/: UniformParams.h  skybox.frag  toy.frag
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy1/shaders/: figures.glsl  sdf.glsl  toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp
tasks/local_shadertoy2/shaders/: sdf.glsl  skybox.frag  toy.frag  toy.vert  toy1.frag
tasks/many_objects/renderer/: WorldRenderer.cpp
tasks/model_bakery/baker/: main.cpp
tasks/pbr/baker/: main.cpp
tasks/pbr/renderer/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain/renderer/: CMakeLists.txt  Perlin.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain2/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
(+25 files in other folders)
